corpus/kernel/6.17/gpu/index.md
---
collection: kernel
version: "6.17"
title: "GPU Driver Developer’s Guide"
source_url: https://www.kernel.org/doc/html/v6.17/gpu/index.html
fetched_at: 2026-09-16T16:20:48+00:00
---
# GPU Driver Developer’s Guide

- [Introduction](introduction.md)
  - [Style Guidelines](introduction.md#style-guidelines)
    - [Documentation Requirements for kAPI](introduction.md#documentation-requirements-for-kapi)
  - [Getting Started](introduction.md#getting-started)
  - [Contribution Process](introduction.md#contribution-process)
    - [Feature Merge Deadlines](introduction.md#feature-merge-deadlines)
    - [Code of Conduct](introduction.md#code-of-conduct)
  - [Simple DRM drivers to use as examples](introduction.md#simple-drm-drivers-to-use-as-examples)
  - [External References](introduction.md#external-references)
    - [Conference talks](introduction.md#conference-talks)
    - [Slides and articles](introduction.md#slides-and-articles)
- [DRM Internals](drm-internals.md)
  - [Driver Initialization](drm-internals.md#driver-initialization)
    - [Driver Information](drm-internals.md#driver-information)
      - [Major, Minor and Patchlevel](drm-internals.md#major-minor-and-patchlevel)
      - [Name and Description](drm-internals.md#name-and-description)
    - [Module Initialization](drm-internals.md#module-initialization)
    - [Device Instance and Driver Handling](drm-internals.md#device-instance-and-driver-handling)
      - [Display driver example](drm-internals.md#display-driver-example)
    - [Driver Load](drm-internals.md#driver-load)
      - [Component Helper Usage](drm-internals.md#component-helper-usage)
      - [Memory Manager Initialization](drm-internals.md#memory-manager-initialization)
      - [Miscellaneous Device Configuration](drm-internals.md#miscellaneous-device-configuration)
    - [Managed Resources](drm-internals.md#managed-resources)
  - [Open/Close, File Operations and IOCTLs](drm-internals.md#open-close-file-operations-and-ioctls)
    - [File Operations](drm-internals.md#file-operations)
  - [Misc Utilities](drm-internals.md#misc-utilities)
    - [Printer](drm-internals.md#printer)
    - [Utilities](drm-internals.md#utilities)
  - [Unit testing](drm-internals.md#unit-testing)
    - [KUnit](drm-internals.md#kunit)
      - [How to run the tests?](drm-internals.md#how-to-run-the-tests)
      - [KUnit Coverage Rules](drm-internals.md#kunit-coverage-rules)
  - [Legacy Support Code](drm-internals.md#legacy-support-code)
    - [Legacy Suspend/Resume](drm-internals.md#legacy-suspend-resume)
    - [Legacy DMA Services](drm-internals.md#legacy-dma-services)
- [DRM Memory Management](drm-mm.md)
  - [The Translation Table Manager (TTM)](drm-mm.md#the-translation-table-manager-ttm)
    - [TTM device object reference](drm-mm.md#ttm-device-object-reference)
    - [TTM resource placement reference](drm-mm.md#ttm-resource-placement-reference)
    - [TTM resource object reference](drm-mm.md#ttm-resource-object-reference)
    - [TTM TT object reference](drm-mm.md#ttm-tt-object-reference)
    - [TTM page pool reference](drm-mm.md#ttm-page-pool-reference)
  - [The Graphics Execution Manager (GEM)](drm-mm.md#the-graphics-execution-manager-gem)
    - [GEM Initialization](drm-mm.md#gem-initialization)
    - [GEM Objects Creation](drm-mm.md#gem-objects-creation)
    - [GEM Objects Lifetime](drm-mm.md#gem-objects-lifetime)
    - [GEM Objects Naming](drm-mm.md#gem-objects-naming)
    - [GEM Objects Mapping](drm-mm.md#gem-objects-mapping)
    - [Memory Coherency](drm-mm.md#memory-coherency)
    - [Command Execution](drm-mm.md#command-execution)
    - [GEM Function Reference](drm-mm.md#gem-function-reference)
    - [GEM DMA Helper Functions Reference](drm-mm.md#gem-dma-helper-functions-reference)
    - [GEM SHMEM Helper Function Reference](drm-mm.md#gem-shmem-helper-function-reference)
    - [GEM VRAM Helper Functions Reference](drm-mm.md#gem-vram-helper-functions-reference)
    - [GEM TTM Helper Functions Reference](drm-mm.md#gem-ttm-helper-functions-reference)
  - [VMA Offset Manager](drm-mm.md#vma-offset-manager)
  - [PRIME Buffer Sharing](drm-mm.md#prime-buffer-sharing)
    - [Overview and Lifetime Rules](drm-mm.md#overview-and-lifetime-rules)
      - [Reference Counting for GEM Drivers](drm-mm.md#reference-counting-for-gem-drivers)
    - [PRIME Helper Functions](drm-mm.md#prime-helper-functions)
      - [Exporting buffers](drm-mm.md#exporting-buffers)
      - [Importing buffers](drm-mm.md#importing-buffers)
    - [PRIME Function References](drm-mm.md#prime-function-references)
  - [DRM MM Range Allocator](drm-mm.md#drm-mm-range-allocator)
    - [Overview](drm-mm.md#overview)
    - [LRU Scan/Eviction Support](drm-mm.md#lru-scan-eviction-support)
    - [DRM MM Range Allocator Function References](drm-mm.md#drm-mm-range-allocator-function-references)
  - [DRM GPUVM](drm-mm.md#drm-gpuvm)
    - [Overview](drm-mm.md#id3)
    - [Split and Merge](drm-mm.md#split-and-merge)
    - [Locking](drm-mm.md#locking)
    - [Examples](drm-mm.md#examples)
    - [DRM GPUVM Function References](drm-mm.md#drm-gpuvm-function-references)
  - [DRM Buddy Allocator](drm-mm.md#drm-buddy-allocator)
    - [DRM Buddy Function References](drm-mm.md#drm-buddy-function-references)
  - [DRM Cache Handling and Fast WC memcpy()](drm-mm.md#drm-cache-handling-and-fast-wc-memcpy)
  - [DRM Sync Objects](drm-mm.md#drm-sync-objects)
    - [Host-side wait on syncobjs](drm-mm.md#host-side-wait-on-syncobjs)
    - [Import/export of syncobjs](drm-mm.md#import-export-of-syncobjs)
    - [Import/export of timeline points in timeline syncobjs](drm-mm.md#import-export-of-timeline-points-in-timeline-syncobjs)
  - [DRM Execution context](drm-mm.md#drm-execution-context)
  - [GPU Scheduler](drm-mm.md#gpu-scheduler)
    - [Overview](drm-mm.md#id5)
    - [Flow Control](drm-mm.md#flow-control)
    - [Scheduler Function References](drm-mm.md#scheduler-function-references)
- [Kernel Mode Setting (KMS)](drm-kms.md)
  - [Overview](drm-kms.md#overview)
  - [KMS Core Structures and Functions](drm-kms.md#kms-core-structures-and-functions)
  - [Modeset Base Object Abstraction](drm-kms.md#modeset-base-object-abstraction)
  - [Atomic Mode Setting](drm-kms.md#atomic-mode-setting)
    - [Handling Driver Private State](drm-kms.md#handling-driver-private-state)
    - [Atomic Mode Setting Function Reference](drm-kms.md#atomic-mode-setting-function-reference)
    - [Atomic Mode Setting IOCTL and UAPI Functions](drm-kms.md#atomic-mode-setting-ioctl-and-uapi-functions)
  - [CRTC Abstraction](drm-kms.md#crtc-abstraction)
    - [CRTC Functions Reference](drm-kms.md#crtc-functions-reference)
    - [Color Management Functions Reference](drm-kms.md#color-management-functions-reference)
  - [Frame Buffer Abstraction](drm-kms.md#frame-buffer-abstraction)
    - [Frame Buffer Functions Reference](drm-kms.md#frame-buffer-functions-reference)
  - [DRM Format Handling](drm-kms.md#drm-format-handling)
    - [Format Modifiers](drm-kms.md#format-modifiers)
    - [Open Source User Waiver](drm-kms.md#open-source-user-waiver)
    - [Format Functions Reference](drm-kms.md#format-functions-reference)
  - [Dumb Buffer Objects](drm-kms.md#dumb-buffer-objects)
  - [Plane Abstraction](drm-kms.md#plane-abstraction)
    - [Plane Functions Reference](drm-kms.md#plane-functions-reference)
    - [Plane Composition Functions Reference](drm-kms.md#plane-composition-functions-reference)
    - [Plane Damage Tracking Functions Reference](drm-kms.md#plane-damage-tracking-functions-reference)
    - [Plane Panic Feature](drm-kms.md#plane-panic-feature)
    - [Plane Panic Functions Reference](drm-kms.md#plane-panic-functions-reference)
  - [Display Modes Function Reference](drm-kms.md#display-modes-function-reference)
  - [Connector Abstraction](drm-kms.md#connector-abstraction)
    - [Connector Functions Reference](drm-kms.md#connector-functions-reference)
    - [Writeback Connectors](drm-kms.md#writeback-connectors)
  - [Encoder Abstraction](drm-kms.md#encoder-abstraction)
    - [Encoder Functions Reference](drm-kms.md#encoder-functions-reference)
  - [KMS Locking](drm-kms.md#kms-locking)
  - [KMS Properties](drm-kms.md#kms-properties)
    - [Requirements](drm-kms.md#requirements)
    - [Property Types and Blob Property Support](drm-kms.md#property-types-and-blob-property-support)
    - [Standard Connector Properties](drm-kms.md#standard-connector-properties)
    - [HDMI Specific Connector Properties](drm-kms.md#hdmi-specific-connector-properties)
    - [Analog TV Specific Connector Properties](drm-kms.md#analog-tv-specific-connector-properties)
    - [Standard CRTC Properties](drm-kms.md#standard-crtc-properties)
    - [Standard Plane Properties](drm-kms.md#standard-plane-properties)
    - [Plane Composition Properties](drm-kms.md#plane-composition-properties)
    - [Damage Tracking Properties](drm-kms.md#damage-tracking-properties)
    - [Color Management Properties](drm-kms.md#color-management-properties)
    - [Tile Group Property](drm-kms.md#tile-group-property)
    - [Explicit Fencing Properties](drm-kms.md#explicit-fencing-properties)
    - [Variable Refresh Properties](drm-kms.md#variable-refresh-properties)
    - [Cursor Hotspot Properties](drm-kms.md#cursor-hotspot-properties)
    - [Existing KMS Properties](drm-kms.md#existing-kms-properties)
  - [Vertical Blanking](drm-kms.md#vertical-blanking)
    - [Vertical Blanking and Interrupt Handling Functions Reference](drm-kms.md#vertical-blanking-and-interrupt-handling-functions-reference)
  - [Vertical Blank Work](drm-kms.md#vertical-blank-work)
    - [Vertical Blank Work Functions Reference](drm-kms.md#vertical-blank-work-functions-reference)
- [Mode Setting Helper Functions](drm-kms-helpers.md)
  - [Modeset Helper Reference for Common Vtables](drm-kms-helpers.md#modeset-helper-reference-for-common-vtables)
  - [Atomic Modeset Helper Functions Reference](drm-kms-helpers.md#atomic-modeset-helper-functions-reference)
    - [Overview](drm-kms-helpers.md#overview)
    - [Implementing Asynchronous Atomic Commit](drm-kms-helpers.md#implementing-asynchronous-atomic-commit)
    - [Helper Functions Reference](drm-kms-helpers.md#helper-functions-reference)
    - [Atomic State Reset and Initialization](drm-kms-helpers.md#atomic-state-reset-and-initialization)
    - [Atomic State Helper Reference](drm-kms-helpers.md#atomic-state-helper-reference)
    - [GEM Atomic Helper Reference](drm-kms-helpers.md#gem-atomic-helper-reference)
  - [Simple KMS Helper Reference](drm-kms-helpers.md#simple-kms-helper-reference)
  - [fbdev Helper Functions Reference](drm-kms-helpers.md#fbdev-helper-functions-reference)
  - [format Helper Functions Reference](drm-kms-helpers.md#format-helper-functions-reference)
  - [Framebuffer DMA Helper Functions Reference](drm-kms-helpers.md#framebuffer-dma-helper-functions-reference)
  - [Framebuffer GEM Helper Reference](drm-kms-helpers.md#framebuffer-gem-helper-reference)
  - [Bridges](drm-kms-helpers.md#bridges)
    - [Overview](drm-kms-helpers.md#id1)
    - [Display Driver Integration](drm-kms-helpers.md#display-driver-integration)
    - [Special Care with MIPI-DSI bridges](drm-kms-helpers.md#special-care-with-mipi-dsi-bridges)
    - [Bridge Operations](drm-kms-helpers.md#bridge-operations)
    - [Bridge Connector Helper](drm-kms-helpers.md#bridge-connector-helper)
    - [Bridge Helper Reference](drm-kms-helpers.md#bridge-helper-reference)
    - [MIPI-DSI bridge operation](drm-kms-helpers.md#mipi-dsi-bridge-operation)
    - [Bridge Connector Helper Reference](drm-kms-helpers.md#bridge-connector-helper-reference)
    - [Panel-Bridge Helper Reference](drm-kms-helpers.md#panel-bridge-helper-reference)
  - [Panel Helper Reference](drm-kms-helpers.md#panel-helper-reference)
  - [Panel Self Refresh Helper Reference](drm-kms-helpers.md#panel-self-refresh-helper-reference)
  - [HDMI Atomic State Helpers](drm-kms-helpers.md#hdmi-atomic-state-helpers)
    - [Overview](drm-kms-helpers.md#id2)
      - [Infoframes Compliance](drm-kms-helpers.md#infoframes-compliance)
      - [Testing](drm-kms-helpers.md#testing)
    - [Functions Reference](drm-kms-helpers.md#functions-reference)
  - [HDCP Helper Functions Reference](drm-kms-helpers.md#hdcp-helper-functions-reference)
  - [Display Port Helper Functions Reference](drm-kms-helpers.md#display-port-helper-functions-reference)
  - [Display Port CEC Helper Functions Reference](drm-kms-helpers.md#display-port-cec-helper-functions-reference)
  - [Display Port Dual Mode Adaptor Helper Functions Reference](drm-kms-helpers.md#display-port-dual-mode-adaptor-helper-functions-reference)
  - [Display Port MST Helpers](drm-kms-helpers.md#display-port-mst-helpers)
    - [Overview](drm-kms-helpers.md#id3)
      - [Topology refcount overview](drm-kms-helpers.md#topology-refcount-overview)
      - [Malloc refcount overview](drm-kms-helpers.md#malloc-refcount-overview)
      - [Refcount relationships in a topology](drm-kms-helpers.md#refcount-relationships-in-a-topology)
    - [Functions Reference](drm-kms-helpers.md#id4)
    - [Topology Lifetime Internals](drm-kms-helpers.md#topology-lifetime-internals)
  - [MIPI DBI Helper Functions Reference](drm-kms-helpers.md#mipi-dbi-helper-functions-reference)
  - [MIPI DSI Helper Functions Reference](drm-kms-helpers.md#mipi-dsi-helper-functions-reference)
  - [Display Stream Compression Helper Functions Reference](drm-kms-helpers.md#display-stream-compression-helper-functions-reference)
  - [Output Probing Helper Functions Reference](drm-kms-helpers.md#output-probing-helper-functions-reference)
  - [EDID Helper Functions Reference](drm-kms-helpers.md#edid-helper-functions-reference)
  - [SCDC Helper Functions Reference](drm-kms-helpers.md#scdc-helper-functions-reference)
  - [HDMI Infoframes Helper Reference](drm-kms-helpers.md#hdmi-infoframes-helper-reference)
  - [Rectangle Utilities Reference](drm-kms-helpers.md#rectangle-utilities-reference)
  - [Flip-work Helper Reference](drm-kms-helpers.md#flip-work-helper-reference)
  - [Auxiliary Modeset Helpers](drm-kms-helpers.md#auxiliary-modeset-helpers)
  - [OF/DT Helpers](drm-kms-helpers.md#of-dt-helpers)
  - [Legacy Plane Helper Reference](drm-kms-helpers.md#legacy-plane-helper-reference)
  - [Legacy CRTC/Modeset Helper Functions Reference](drm-kms-helpers.md#legacy-crtc-modeset-helper-functions-reference)
  - [Privacy-screen class](drm-kms-helpers.md#privacy-screen-class)
- [Userland interfaces](drm-uapi.md)
  - [libdrm Device Lookup](drm-uapi.md#libdrm-device-lookup)
  - [Primary Nodes, DRM Master and Authentication](drm-uapi.md#primary-nodes-drm-master-and-authentication)
  - [DRM Display Resource Leasing](drm-uapi.md#drm-display-resource-leasing)
  - [Open-Source Userspace Requirements](drm-uapi.md#open-source-userspace-requirements)
  - [Render nodes](drm-uapi.md#render-nodes)
  - [Device Hot-Unplug](drm-uapi.md#device-hot-unplug)
    - [Requirements for KMS UAPI](drm-uapi.md#requirements-for-kms-uapi)
    - [Requirements for Render and Cross-Device UAPI](drm-uapi.md#requirements-for-render-and-cross-device-uapi)
    - [Requirements for Memory Maps](drm-uapi.md#requirements-for-memory-maps)
  - [Device reset](drm-uapi.md#device-reset)
    - [Kernel Mode Driver](drm-uapi.md#kernel-mode-driver)
    - [User Mode Driver](drm-uapi.md#user-mode-driver)
    - [Robustness](drm-uapi.md#robustness)
      - [OpenGL](drm-uapi.md#opengl)
      - [Vulkan](drm-uapi.md#id1)
    - [Reporting causes of resets](drm-uapi.md#reporting-causes-of-resets)
  - [Device Wedging](drm-uapi.md#device-wedging)
    - [Driver prerequisites](drm-uapi.md#driver-prerequisites)
    - [Recovery](drm-uapi.md#recovery)
    - [Task information](drm-uapi.md#task-information)
    - [Consumer prerequisites](drm-uapi.md#consumer-prerequisites)
    - [Example](drm-uapi.md#example)
    - [Customization](drm-uapi.md#customization)
  - [IOCTL Support on Device Nodes](drm-uapi.md#ioctl-support-on-device-nodes)
    - [Recommended IOCTL Return Values](drm-uapi.md#recommended-ioctl-return-values)
  - [Testing and validation](drm-uapi.md#testing-and-validation)
    - [Testing Requirements for userspace API](drm-uapi.md#testing-requirements-for-userspace-api)
    - [Validating changes with IGT](drm-uapi.md#validating-changes-with-igt)
    - [Using VKMS to test DRM API](drm-uapi.md#using-vkms-to-test-drm-api)
    - [Display CRC Support](drm-uapi.md#display-crc-support)
    - [Debugfs Support](drm-uapi.md#debugfs-support)
  - [Sysfs Support](drm-uapi.md#sysfs-support)
  - [VBlank event handling](drm-uapi.md#vblank-event-handling)
  - [Userspace API Structures](drm-uapi.md#userspace-api-structures)
    - [CRTC index](drm-uapi.md#crtc-index)
  - [dma-buf interoperability](drm-uapi.md#dma-buf-interoperability)
  - [Trace events](drm-uapi.md#trace-events)
    - [Stable uAPI events](drm-uapi.md#stable-uapi-events)
- [DRM client usage stats](drm-usage-stats.md)
  - [File format specification](drm-usage-stats.md#file-format-specification)
    - [Key types](drm-usage-stats.md#key-types)
    - [Data types](drm-usage-stats.md#data-types)
    - [Mandatory fully standardised keys](drm-usage-stats.md#mandatory-fully-standardised-keys)
    - [Optional fully standardised keys](drm-usage-stats.md#optional-fully-standardised-keys)
      - [Identification](drm-usage-stats.md#identification)
      - [Utilization](drm-usage-stats.md#utilization)
      - [Memory](drm-usage-stats.md#memory)
  - [Implementation Details](drm-usage-stats.md#implementation-details)
    - [Driver specific implementations](drm-usage-stats.md#driver-specific-implementations)
- [DRM Driver uAPI](driver-uapi.md)
  - [drm/i915 uAPI](driver-uapi.md#drm-i915-uapi)
  - [drm/nouveau uAPI](driver-uapi.md#drm-nouveau-uapi)
    - [VM_BIND / EXEC uAPI](driver-uapi.md#vm-bind-exec-uapi)
  - [drm/panthor uAPI](driver-uapi.md#drm-panthor-uapi)
  - [drm/xe uAPI](driver-uapi.md#drm-xe-uapi)
  - [drm/asahi uAPI](driver-uapi.md#drm-asahi-uapi)
- [Kernel clients](drm-client.md)
- [Long running workloads and compute](drm-compute.md)
- [GPU Driver Documentation](drivers.md)
  - [drm/amdgpu AMDgpu driver](amdgpu/index.md)
    - [Core Driver Infrastructure](amdgpu/driver-core.md)
      - [GPU Hardware Structure](amdgpu/driver-core.md#gpu-hardware-structure)
      - [GFX, Compute, and SDMA Overall Behavior](amdgpu/driver-core.md#gfx-compute-and-sdma-overall-behavior)
      - [Driver Structure](amdgpu/driver-core.md#driver-structure)
      - [Memory Domains](amdgpu/driver-core.md#memory-domains)
      - [Buffer Objects](amdgpu/driver-core.md#buffer-objects)
      - [PRIME Buffer Sharing](amdgpu/driver-core.md#prime-buffer-sharing)
      - [MMU Notifier](amdgpu/driver-core.md#mmu-notifier)
      - [AMDGPU Virtual Memory](amdgpu/driver-core.md#amdgpu-virtual-memory)
      - [Interrupt Handling](amdgpu/driver-core.md#interrupt-handling)
      - [IP Blocks](amdgpu/driver-core.md#ip-blocks)
    - [AMD Hardware Components Information per Product](amdgpu/amd-hardware-list-info.md)
      - [Accelerated Processing Units (APU) Info](amdgpu/amd-hardware-list-info.md#accelerated-processing-units-apu-info)
      - [Discrete GPU Info](amdgpu/amd-hardware-list-info.md#discrete-gpu-info)
    - [Module Parameters](amdgpu/module-parameters.md)
    - [drm/amdgpu - Graphics and Compute (GC)](amdgpu/gc/index.md)
      - [Graphics (GFX) and Compute Microcontrollers](amdgpu/gc/index.md#graphics-gfx-and-compute-microcontrollers)
        - [MicroEngine Scheduler (MES)](amdgpu/gc/mes.md)
    - [drm/amd/display - Display Core (DC)](amdgpu/display/index.md)
      - [DC Code validation](amdgpu/display/index.md#dc-code-validation)
      - [DC Information](amdgpu/display/index.md#dc-information)
        - [AMDgpu Display Manager](amdgpu/display/display-manager.md)
          - [Lifecycle](amdgpu/display/display-manager.md#lifecycle)
          - [Interrupts](amdgpu/display/display-manager.md#interrupts)
          - [Atomic Implementation](amdgpu/display/display-manager.md#atomic-implementation)
          - [Color Management Properties](amdgpu/display/display-manager.md#color-management-properties)
            - [DC Color Capabilities between DCN generations](amdgpu/display/display-manager.md#dc-color-capabilities-between-dcn-generations)
          - [Blend Mode Properties](amdgpu/display/display-manager.md#blend-mode-properties)
            - [Blend configuration flow](amdgpu/display/display-manager.md#blend-configuration-flow)
        - [Display Core Next (DCN)](amdgpu/display/dcn-overview.md)
          - [Front End and Back End](amdgpu/display/dcn-overview.md#front-end-and-back-end)
          - [Data Flow](amdgpu/display/dcn-overview.md#data-flow)
          - [AMD Hardware Pipeline](amdgpu/display/dcn-overview.md#amd-hardware-pipeline)
          - [Global Sync](amdgpu/display/dcn-overview.md#global-sync)
        - [DCN Blocks](amdgpu/display/dcn-blocks.md)
          - [DCHUBBUB](amdgpu/display/dcn-blocks.md#dchubbub)
          - [HUBP](amdgpu/display/dcn-blocks.md#hubp)
          - [DPP](amdgpu/display/dcn-blocks.md#dpp)
          - [MPC](amdgpu/display/dcn-blocks.md#mpc)
          - [OPP](amdgpu/display/dcn-blocks.md#opp)
          - [DIO](amdgpu/display/dcn-blocks.md#dio)
        - [DC Programming Model](amdgpu/display/programming-model-dcn.md)
          - [Overview](amdgpu/display/programming-model-dcn.md#overview)
          - [Display Driver Architecture Overview](amdgpu/display/programming-model-dcn.md#display-driver-architecture-overview)
            - [Basic Objects](amdgpu/display/programming-model-dcn.md#basic-objects)
            - [Basic Operations](amdgpu/display/programming-model-dcn.md#basic-operations)
        - [Multiplane Overlay (MPO)](amdgpu/display/mpo-overview.md)
          - [Plane Restrictions](amdgpu/display/mpo-overview.md#plane-restrictions)
          - [Cursor Restrictions](amdgpu/display/mpo-overview.md#cursor-restrictions)
          - [Use Cases](amdgpu/display/mpo-overview.md#use-cases)
            - [Picture-in-Picture (PIP) playback - Underlay strategy](amdgpu/display/mpo-overview.md#picture-in-picture-pip-playback-underlay-strategy)
            - [Multiple Display MPO](amdgpu/display/mpo-overview.md#multiple-display-mpo)
              - [Limitations](amdgpu/display/mpo-overview.md#limitations)
        - [Display Core Debug tools](amdgpu/display/dc-debug.md)
          - [Narrow down display issues](amdgpu/display/dc-debug.md#narrow-down-display-issues)
            - [DC dmesg important messages](amdgpu/display/dc-debug.md#dc-dmesg-important-messages)
            - [Avoid loading display core](amdgpu/display/dc-debug.md#avoid-loading-display-core)
            - [Display flickering](amdgpu/display/dc-debug.md#display-flickering)
            - [Display artifacts](amdgpu/display/dc-debug.md#display-artifacts)
          - [Disabling/Enabling specific features](amdgpu/display/dc-debug.md#disabling-enabling-specific-features)
          - [DC Visual Confirmation](amdgpu/display/dc-debug.md#dc-visual-confirmation)
            - [Multiple Planes Debug](amdgpu/display/dc-debug.md#multiple-planes-debug)
            - [Pipe Split Debug](amdgpu/display/dc-debug.md#pipe-split-debug)
          - [DTN Debug](amdgpu/display/dc-debug.md#dtn-debug)
          - [Collect Firmware information](amdgpu/display/dc-debug.md#collect-firmware-information)
          - [DMUB Firmware Debug](amdgpu/display/dc-debug.md#dmub-firmware-debug)
            - [Trace Groups](amdgpu/display/dc-debug.md#trace-groups)
        - [AMDGPU - Display Contributions](amdgpu/display/display-contributing.md)
          - [Gitlab issues](amdgpu/display/display-contributing.md#gitlab-issues)
          - [IGT](amdgpu/display/display-contributing.md#igt)
          - [Compilation](amdgpu/display/display-contributing.md#compilation)
            - [Fix compilation warnings](amdgpu/display/display-contributing.md#fix-compilation-warnings)
            - [Fix compilation issues when using um architecture](amdgpu/display/display-contributing.md#fix-compilation-issues-when-using-um-architecture)
          - [Code Refactor](amdgpu/display/display-contributing.md#code-refactor)
            - [Add prefix to DC functions to improve the debug with ftrace](amdgpu/display/display-contributing.md#add-prefix-to-dc-functions-to-improve-the-debug-with-ftrace)
            - [Reduce code duplication](amdgpu/display/display-contributing.md#reduce-code-duplication)
            - [Make atomic_commit_[check|tail] more readable](amdgpu/display/display-contributing.md#make-atomic-commit-check-tail-more-readable)
          - [Documentation](amdgpu/display/display-contributing.md#documentation)
            - [Expand kernel-doc](amdgpu/display/display-contributing.md#expand-kernel-doc)
          - [Beyond AMDGPU](amdgpu/display/display-contributing.md#beyond-amdgpu)
            - [Enable underlay](amdgpu/display/display-contributing.md#enable-underlay)
            - [Adaptive Backlight Modulation (ABM)](amdgpu/display/display-contributing.md#adaptive-backlight-modulation-abm)
            - [HDR & Color management & VRR](amdgpu/display/display-contributing.md#hdr-color-management-vrr)
        - [DC Glossary](amdgpu/display/dc-glossary.md)
    - [dGPU firmware flashing](amdgpu/flashing.md)
      - [IFWI](amdgpu/flashing.md#ifwi)
      - [USB-C PD F/W](amdgpu/flashing.md#usb-c-pd-f-w)
      - [sysfs files](amdgpu/flashing.md#sysfs-files)
    - [AMDGPU XGMI Support](amdgpu/xgmi.md)
    - [AMDGPU RAS Support](amdgpu/ras.md)
      - [RAS debugfs/sysfs Control and Error Injection Interfaces](amdgpu/ras.md#ras-debugfs-sysfs-control-and-error-injection-interfaces)
      - [RAS Reboot Behavior for Unrecoverable Errors](amdgpu/ras.md#ras-reboot-behavior-for-unrecoverable-errors)
      - [RAS Error Count sysfs Interface](amdgpu/ras.md#ras-error-count-sysfs-interface)
      - [RAS EEPROM debugfs Interface](amdgpu/ras.md#ras-eeprom-debugfs-interface)
      - [RAS VRAM Bad Pages sysfs Interface](amdgpu/ras.md#ras-vram-bad-pages-sysfs-interface)
      - [Sample Code](amdgpu/ras.md#sample-code)
    - [GPU Power/Thermal Controls and Monitoring](amdgpu/thermal.md)
      - [HWMON Interfaces](amdgpu/thermal.md#hwmon-interfaces)
      - [GPU sysfs Power State Interfaces](amdgpu/thermal.md#gpu-sysfs-power-state-interfaces)
        - [power_dpm_state](amdgpu/thermal.md#power-dpm-state)
        - [power_dpm_force_performance_level](amdgpu/thermal.md#power-dpm-force-performance-level)
        - [pp_table](amdgpu/thermal.md#pp-table)
        - [pp_od_clk_voltage](amdgpu/thermal.md#pp-od-clk-voltage)
        - [pp_dpm_\*](amdgpu/thermal.md#pp-dpm)
        - [pp_power_profile_mode](amdgpu/thermal.md#pp-power-profile-mode)
        - [pm_policy](amdgpu/thermal.md#pm-policy)
        - [\*_busy_percent](amdgpu/thermal.md#busy-percent)
        - [gpu_metrics](amdgpu/thermal.md#gpu-metrics)
        - [fan_curve](amdgpu/thermal.md#fan-curve)
        - [acoustic_limit_rpm_threshold](amdgpu/thermal.md#acoustic-limit-rpm-threshold)
        - [acoustic_target_rpm_threshold](amdgpu/thermal.md#acoustic-target-rpm-threshold)
        - [fan_target_temperature](amdgpu/thermal.md#fan-target-temperature)
        - [fan_minimum_pwm](amdgpu/thermal.md#fan-minimum-pwm)
        - [fan_zero_rpm_enable](amdgpu/thermal.md#fan-zero-rpm-enable)
        - [fan_zero_rpm_stop_temperature](amdgpu/thermal.md#fan-zero-rpm-stop-temperature)
      - [GFXOFF](amdgpu/thermal.md#gfxoff)
        - [`amdgpu_gfxoff`](amdgpu/thermal.md#amdgpu-gfxoff)
        - [`amdgpu_gfxoff_status`](amdgpu/thermal.md#amdgpu-gfxoff-status)
        - [`amdgpu_gfxoff_count`](amdgpu/thermal.md#amdgpu-gfxoff-count)
        - [`amdgpu_gfxoff_residency`](amdgpu/thermal.md#amdgpu-gfxoff-residency)
    - [Misc AMDGPU driver information](amdgpu/driver-misc.md)
      - [GPU Product Information](amdgpu/driver-misc.md#gpu-product-information)
        - [product_name](amdgpu/driver-misc.md#product-name)
        - [product_number](amdgpu/driver-misc.md#product-number)
        - [serial_number](amdgpu/driver-misc.md#serial-number)
        - [fru_id](amdgpu/driver-misc.md#fru-id)
        - [manufacturer](amdgpu/driver-misc.md#manufacturer)
        - [unique_id](amdgpu/driver-misc.md#unique-id)
        - [board_info](amdgpu/driver-misc.md#board-info)
      - [GPU Memory Usage Information](amdgpu/driver-misc.md#gpu-memory-usage-information)
        - [mem_info_vram_total](amdgpu/driver-misc.md#mem-info-vram-total)
        - [mem_info_vram_used](amdgpu/driver-misc.md#mem-info-vram-used)
        - [mem_info_vis_vram_total](amdgpu/driver-misc.md#mem-info-vis-vram-total)
        - [mem_info_vis_vram_used](amdgpu/driver-misc.md#mem-info-vis-vram-used)
        - [mem_info_gtt_total](amdgpu/driver-misc.md#mem-info-gtt-total)
        - [mem_info_gtt_used](amdgpu/driver-misc.md#mem-info-gtt-used)
      - [PCIe Accounting Information](amdgpu/driver-misc.md#pcie-accounting-information)
        - [pcie_bw](amdgpu/driver-misc.md#pcie-bw)
        - [pcie_replay_count](amdgpu/driver-misc.md#pcie-replay-count)
      - [GPU SmartShift Information](amdgpu/driver-misc.md#gpu-smartshift-information)
        - [smartshift_apu_power](amdgpu/driver-misc.md#smartshift-apu-power)
        - [smartshift_dgpu_power](amdgpu/driver-misc.md#smartshift-dgpu-power)
        - [smartshift_bias](amdgpu/driver-misc.md#smartshift-bias)
    - [GPU Debugging](amdgpu/debugging.md)
      - [General Debugging Options](amdgpu/debugging.md#general-debugging-options)
      - [GPUVM Debugging](amdgpu/debugging.md#gpuvm-debugging)
      - [Decoding a GPUVM Page Fault](amdgpu/debugging.md#decoding-a-gpuvm-page-fault)
      - [UMR](amdgpu/debugging.md#umr)
      - [Debugging backlight brightness](amdgpu/debugging.md#debugging-backlight-brightness)
    - [AMDGPU DebugFS](amdgpu/debugfs.md)
      - [DebugFS Files](amdgpu/debugfs.md#debugfs-files)
        - [amdgpu_benchmark](amdgpu/debugfs.md#amdgpu-benchmark)
        - [amdgpu_test_ib](amdgpu/debugfs.md#amdgpu-test-ib)
        - [amdgpu_discovery](amdgpu/debugfs.md#amdgpu-discovery)
        - [amdgpu_vbios](amdgpu/debugfs.md#amdgpu-vbios)
        - [amdgpu_evict_gtt](amdgpu/debugfs.md#amdgpu-evict-gtt)
        - [amdgpu_evict_vram](amdgpu/debugfs.md#amdgpu-evict-vram)
        - [amdgpu_gpu_recover](amdgpu/debugfs.md#amdgpu-gpu-recover)
        - [amdgpu_ring_<name>](amdgpu/debugfs.md#amdgpu-ring-name)
        - [amdgpu_mqd_<name>](amdgpu/debugfs.md#amdgpu-mqd-name)
        - [amdgpu_error_<name>](amdgpu/debugfs.md#amdgpu-error-name)
        - [amdgpu_pm_info](amdgpu/debugfs.md#amdgpu-pm-info)
        - [amdgpu_firmware_info](amdgpu/debugfs.md#amdgpu-firmware-info)
        - [amdgpu_fence_info](amdgpu/debugfs.md#amdgpu-fence-info)
        - [amdgpu_gem_info](amdgpu/debugfs.md#amdgpu-gem-info)
        - [amdgpu_vm_info](amdgpu/debugfs.md#amdgpu-vm-info)
        - [amdgpu_sa_info](amdgpu/debugfs.md#amdgpu-sa-info)
        - [amdgpu_<pool>_mm](amdgpu/debugfs.md#amdgpu-pool-mm)
        - [amdgpu_vram](amdgpu/debugfs.md#amdgpu-vram)
        - [amdgpu_iomem](amdgpu/debugfs.md#amdgpu-iomem)
        - [amdgpu_regs_\*](amdgpu/debugfs.md#amdgpu-regs)
        - [amdgpu_regs2](amdgpu/debugfs.md#amdgpu-regs2)
        - [amdgpu_sensors](amdgpu/debugfs.md#amdgpu-sensors)
        - [amdgpu_gca_config](amdgpu/debugfs.md#amdgpu-gca-config)
        - [amdgpu_wave](amdgpu/debugfs.md#amdgpu-wave)
        - [amdgpu_gpr](amdgpu/debugfs.md#amdgpu-gpr)
        - [amdgpu_gprwave](amdgpu/debugfs.md#amdgpu-gprwave)
        - [amdgpu_fw_attestation](amdgpu/debugfs.md#amdgpu-fw-attestation)
    - [AMDGPU Process Isolation](amdgpu/process-isolation.md)
      - [Process Isolation](amdgpu/process-isolation.md#process-isolation)
        - [Partition Handling](amdgpu/process-isolation.md#partition-handling)
      - [Cleaner Shader Execution](amdgpu/process-isolation.md#cleaner-shader-execution)
    - [AMDGPU Glossary](amdgpu/amdgpu-glossary.md)
  - [drm/i915 Intel GFX Driver](i915.md)
    - [Core Driver Infrastructure](i915.md#core-driver-infrastructure)
      - [Runtime Power Management](i915.md#runtime-power-management)
      - [Interrupt Handling](i915.md#interrupt-handling)
      - [Intel GVT-g Guest Support(vGPU)](i915.md#intel-gvt-g-guest-support-vgpu)
      - [Intel GVT-g Host Support(vGPU device model)](i915.md#intel-gvt-g-host-support-vgpu-device-model)
      - [Workarounds](i915.md#workarounds)
    - [Display Hardware Handling](i915.md#display-hardware-handling)
      - [Mode Setting Infrastructure](i915.md#mode-setting-infrastructure)
      - [Frontbuffer Tracking](i915.md#frontbuffer-tracking)
      - [Display FIFO Underrun Reporting](i915.md#display-fifo-underrun-reporting)
      - [Plane Configuration](i915.md#plane-configuration)
      - [Atomic Plane Helpers](i915.md#atomic-plane-helpers)
      - [Asynchronous Page Flip](i915.md#asynchronous-page-flip)
      - [Output Probing](i915.md#output-probing)
      - [Hotplug](i915.md#hotplug)
      - [High Definition Audio](i915.md#high-definition-audio)
      - [Intel HDMI LPE Audio Support](i915.md#intel-hdmi-lpe-audio-support)
      - [Panel Self Refresh PSR (PSR/SRD)](i915.md#panel-self-refresh-psr-psr-srd)
      - [Frame Buffer Compression (FBC)](i915.md#frame-buffer-compression-fbc)
      - [Display Refresh Rate Switching (DRRS)](i915.md#display-refresh-rate-switching-drrs)
      - [DPIO](i915.md#dpio)
      - [DMC Firmware Support](i915.md#dmc-firmware-support)
      - [DMC Flip Queue](i915.md#dmc-flip-queue)
      - [DMC wakelock support](i915.md#dmc-wakelock-support)
      - [Video BIOS Table (VBT)](i915.md#video-bios-table-vbt)
      - [Display clocks](i915.md#display-clocks)
      - [Display PLLs](i915.md#display-plls)
      - [Display State Buffer](i915.md#display-state-buffer)
    - [GT Programming](i915.md#gt-programming)
      - [Multicast/Replicated (MCR) Registers](i915.md#multicast-replicated-mcr-registers)
    - [Memory Management and Command Submission](i915.md#memory-management-and-command-submission)
      - [Intel GPU Basics](i915.md#intel-gpu-basics)
      - [Locking Guidelines](i915.md#locking-guidelines)
      - [GEM BO Management Implementation Details](i915.md#gem-bo-management-implementation-details)
      - [Buffer Object Eviction](i915.md#buffer-object-eviction)
      - [Buffer Object Memory Shrinking](i915.md#buffer-object-memory-shrinking)
      - [Batchbuffer Parsing](i915.md#batchbuffer-parsing)
      - [User Batchbuffer Execution](i915.md#user-batchbuffer-execution)
      - [Scheduling](i915.md#scheduling)
      - [Logical Rings, Logical Ring Contexts and Execlists](i915.md#logical-rings-logical-ring-contexts-and-execlists)
      - [Global GTT views](i915.md#global-gtt-views)
      - [GTT Fences and Swizzling](i915.md#gtt-fences-and-swizzling)
        - [Global GTT Fence Handling](i915.md#global-gtt-fence-handling)
        - [Hardware Tiling and Swizzling Details](i915.md#hardware-tiling-and-swizzling-details)
      - [Object Tiling IOCTLs](i915.md#object-tiling-ioctls)
      - [Protected Objects](i915.md#protected-objects)
    - [Microcontrollers](i915.md#microcontrollers)
      - [WOPCM](i915.md#wopcm)
        - [WOPCM Layout](i915.md#wopcm-layout)
      - [GuC](i915.md#guc)
        - [GuC Firmware Layout](i915.md#guc-firmware-layout)
        - [GuC Memory Management](i915.md#guc-memory-management)
        - [GuC-specific firmware loader](i915.md#guc-specific-firmware-loader)
        - [GuC-based command submission](i915.md#guc-based-command-submission)
        - [GuC ABI](i915.md#guc-abi)
      - [HuC](i915.md#huc)
        - [HuC Memory Management](i915.md#huc-memory-management)
        - [HuC Firmware Layout](i915.md#huc-firmware-layout)
      - [DMC](i915.md#dmc)
    - [Tracing](i915.md#tracing)
      - [i915_ppgtt_create and i915_ppgtt_release](i915.md#i915-ppgtt-create-and-i915-ppgtt-release)
      - [i915_context_create and i915_context_free](i915.md#i915-context-create-and-i915-context-free)
    - [Perf](i915.md#perf)
      - [Overview](i915.md#overview)
      - [Comparison with Core Perf](i915.md#comparison-with-core-perf)
        - [Issues hit with first prototype based on Core Perf](i915.md#issues-hit-with-first-prototype-based-on-core-perf)
      - [i915 Driver Entry Points](i915.md#i915-driver-entry-points)
      - [i915 Perf Stream](i915.md#i915-perf-stream)
      - [i915 Perf Observation Architecture Stream](i915.md#i915-perf-observation-architecture-stream)
      - [Other i915 Perf Internals](i915.md#other-i915-perf-internals)
    - [Style](i915.md#style)
      - [Register macro definition style](i915.md#register-macro-definition-style)
        - [File Layout](i915.md#file-layout)
        - [Naming](i915.md#naming)
        - [Examples](i915.md#examples)
    - [i915 DRM client usage stats implementation](i915.md#i915-drm-client-usage-stats-implementation)
  - [drm/imagination PowerVR Graphics Driver](imagination/index.md)
    - [Contents](imagination/index.md#contents)
      - [UAPI](imagination/uapi.md)
        - [OBJECT ARRAYS](imagination/uapi.md#object-arrays)
        - [IOCTLS](imagination/uapi.md#ioctls)
          - [DEV_QUERY](imagination/uapi.md#dev-query)
          - [CREATE_BO](imagination/uapi.md#create-bo)
          - [GET_BO_MMAP_OFFSET](imagination/uapi.md#get-bo-mmap-offset)
          - [CREATE_VM_CONTEXT and DESTROY_VM_CONTEXT](imagination/uapi.md#create-vm-context-and-destroy-vm-context)
          - [VM_MAP and VM_UNMAP](imagination/uapi.md#vm-map-and-vm-unmap)
          - [CREATE_CONTEXT and DESTROY_CONTEXT](imagination/uapi.md#create-context-and-destroy-context)
          - [CREATE_FREE_LIST and DESTROY_FREE_LIST](imagination/uapi.md#create-free-list-and-destroy-free-list)
          - [CREATE_HWRT_DATASET and DESTROY_HWRT_DATASET](imagination/uapi.md#create-hwrt-dataset-and-destroy-hwrt-dataset)
          - [SUBMIT_JOBS](imagination/uapi.md#submit-jobs)
        - [Internal notes](imagination/uapi.md#internal-notes)
  - [drm/mcde ST-Ericsson MCDE Multi-channel display engine](mcde.md)
  - [drm/meson AmLogic Meson Video Processing Unit](meson.md)
    - [Video Processing Unit](meson.md#video-processing-unit)
    - [Video Input Unit](meson.md#video-input-unit)
    - [Video Post Processing](meson.md#video-post-processing)
    - [Video Encoder](meson.md#video-encoder)
    - [Video Clocks](meson.md#video-clocks)
    - [HDMI Video Output](meson.md#hdmi-video-output)
  - [drm/nouveau NVIDIA GPU Driver](nouveau.md)
    - [NVKM: NVIDIA Kernel Manager](nouveau.md#nvkm-nvidia-kernel-manager)
      - [GSP Support](nouveau.md#gsp-support)
  - [drm/pl111 ARM PrimeCell PL110 and PL111 CLCD Driver](pl111.md)
  - [drm/tegra NVIDIA Tegra GPU and display driver](tegra.md)
    - [Driver Infrastructure](tegra.md#driver-infrastructure)
      - [Host1x Infrastructure Reference](tegra.md#host1x-infrastructure-reference)
      - [Host1x Syncpoint Reference](tegra.md#host1x-syncpoint-reference)
    - [KMS driver](tegra.md#kms-driver)
      - [Display Controllers](tegra.md#display-controllers)
        - [Windows](tegra.md#windows)
      - [Outputs](tegra.md#outputs)
        - [RGB/LVDS](tegra.md#rgb-lvds)
        - [HDMI](tegra.md#hdmi)
        - [DSI](tegra.md#dsi)
        - [eDP/DP](tegra.md#edp-dp)
    - [Userspace Interface](tegra.md#userspace-interface)
      - [GEM Buffers](tegra.md#gem-buffers)
      - [Syncpoints](tegra.md#syncpoints)
      - [Command Stream Submission](tegra.md#command-stream-submission)
  - [drm/tve200 Faraday TV Encoder 200](tve200.md)
  - [drm/v3d Broadcom V3D Graphics Driver](v3d.md)
    - [GPU buffer object (BO) management](v3d.md#gpu-buffer-object-bo-management)
      - [Address space management](v3d.md#address-space-management)
      - [GPU Scheduling](v3d.md#gpu-scheduling)
    - [Interrupts](v3d.md#interrupts)
  - [drm/vc4 Broadcom VC4 Graphics Driver](vc4.md)
    - [Display Hardware Handling](vc4.md#display-hardware-handling)
      - [Pixel Valve (DRM CRTC)](vc4.md#pixel-valve-drm-crtc)
      - [HVS](vc4.md#hvs)
      - [HVS planes](vc4.md#hvs-planes)
      - [HDMI encoder](vc4.md#hdmi-encoder)
      - [DSI encoder](vc4.md#dsi-encoder)
      - [DPI encoder](vc4.md#dpi-encoder)
      - [VEC (Composite TV out) encoder](vc4.md#vec-composite-tv-out-encoder)
    - [KUnit Tests](vc4.md#kunit-tests)
    - [Memory Management and 3D Command Submission](vc4.md#memory-management-and-3d-command-submission)
      - [GPU buffer object (BO) management](vc4.md#gpu-buffer-object-bo-management)
      - [V3D binner command list (BCL) validation](vc4.md#v3d-binner-command-list-bcl-validation)
      - [V3D render command list (RCL) generation](vc4.md#v3d-render-command-list-rcl-generation)
      - [Shader validator for VC4](vc4.md#shader-validator-for-vc4)
      - [V3D Interrupts](vc4.md#v3d-interrupts)
  - [drm/vkms Virtual Kernel Modesetting](vkms.md)
    - [Setup](vkms.md#setup)
    - [Testing With IGT](vkms.md#testing-with-igt)
    - [Testing With KUnit](vkms.md#testing-with-kunit)
    - [TODO](vkms.md#todo)
      - [IGT better support](vkms.md#igt-better-support)
      - [Add Plane Features](vkms.md#add-plane-features)
      - [Runtime Configuration](vkms.md#runtime-configuration)
      - [Writeback support](vkms.md#writeback-support)
      - [Output Features](vkms.md#output-features)
      - [CRC API Improvements](vkms.md#crc-api-improvements)
      - [Atomic Check using eBPF](vkms.md#atomic-check-using-ebpf)
  - [drm/bridge/dw-hdmi Synopsys DesignWare HDMI Controller](bridge/dw-hdmi.md)
    - [Synopsys DesignWare HDMI Controller](bridge/dw-hdmi.md#synopsys-designware-hdmi-controller)
      - [Supported Input Formats and Encodings](bridge/dw-hdmi.md#supported-input-formats-and-encodings)
  - [drm/xen-front Xen para-virtualized frontend driver](xen-front.md)
    - [Driver modes of operation in terms of display buffers used](xen-front.md#driver-modes-of-operation-in-terms-of-display-buffers-used)
      - [Buffers allocated by the frontend driver](xen-front.md#buffers-allocated-by-the-frontend-driver)
      - [Buffers allocated by the backend](xen-front.md#buffers-allocated-by-the-backend)
    - [Driver limitations](xen-front.md#driver-limitations)
  - [drm/xe Intel GFX Driver](xe/index.md)
    - [Memory Management](xe/xe_mm.md)
      - [BO management](xe/xe_mm.md#bo-management)
      - [BO creation](xe/xe_mm.md#bo-creation)
        - [Kernel BOs](xe/xe_mm.md#kernel-bos)
        - [User BOs](xe/xe_mm.md#user-bos)
          - [Private BOs](xe/xe_mm.md#private-bos)
          - [External BOs](xe/xe_mm.md#external-bos)
          - [BO placement](xe/xe_mm.md#bo-placement)
      - [BO validation](xe/xe_mm.md#bo-validation)
      - [BO eviction / moving](xe/xe_mm.md#bo-eviction-moving)
        - [Runtime eviction](xe/xe_mm.md#runtime-eviction)
        - [Rebinds after runtime eviction](xe/xe_mm.md#rebinds-after-runtime-eviction)
        - [Suspend / resume eviction of VRAM](xe/xe_mm.md#suspend-resume-eviction-of-vram)
        - [Rebinds after suspend / resume](xe/xe_mm.md#rebinds-after-suspend-resume)
      - [Future work](xe/xe_mm.md#future-work)
      - [GGTT](xe/xe_mm.md#ggtt)
        - [GGTT Internal API](xe/xe_mm.md#ggtt-internal-api)
      - [Pagetable building](xe/xe_mm.md#pagetable-building)
    - [Map Layer](xe/xe_map.md)
    - [Migrate Layer](xe/xe_migrate.md)
      - [Special VM details](xe/xe_migrate.md#special-vm-details)
      - [Bind jobs](xe/xe_migrate.md#bind-jobs)
      - [Copy / clear jobs](xe/xe_migrate.md#copy-clear-jobs)
      - [Future work](xe/xe_migrate.md#future-work)
    - [Command submission](xe/xe_cs.md)
      - [Flow](xe/xe_cs.md#flow)
    - [Runtime Power Management](xe/xe_pm.md)
      - [Internal API](xe/xe_pm.md#internal-api)
    - [Xe GT Frequency Management](xe/xe_gt_freq.md)
      - [Internal API](xe/xe_gt_freq.md#internal-api)
    - [Pcode](xe/xe_pcode.md)
      - [Internal API](xe/xe_pcode.md#internal-api)
    - [Boot Survivability](xe/xe_pcode.md#boot-survivability)
    - [GT Multicast/Replicated (MCR) Register Support](xe/xe_gt_mcr.md)
      - [Internal API](xe/xe_gt_mcr.md#internal-api)
    - [Hardware workarounds](xe/xe_wa.md)
      - [Internal API](xe/xe_wa.md#internal-api)
    - [Register Table Processing](xe/xe_rtp.md)
      - [Internal API](xe/xe_rtp.md#internal-api)
    - [Firmware](xe/xe_firmware.md)
      - [Firmware Layout](xe/xe_firmware.md#firmware-layout)
      - [Write Once Protected Content Memory (WOPCM) Layout](xe/xe_firmware.md#write-once-protected-content-memory-wopcm-layout)
      - [GuC CTB Blob](xe/xe_firmware.md#guc-ctb-blob)
      - [GuC Power Conservation (PC)](xe/xe_firmware.md#guc-power-conservation-pc)
      - [PCIe Gen5 Limitations](xe/xe_firmware.md#pcie-gen5-limitations)
      - [Internal API](xe/xe_firmware.md#internal-api)
    - [Multi-tile Devices](xe/xe_tile.md)
      - [Internal API](xe/xe_tile.md#internal-api)
    - [Debugging](xe/xe_debugging.md)
    - [Xe Device Coredump](xe/xe_devcoredump.md)
      - [Internal API](xe/xe_devcoredump.md#internal-api)
    - [Xe DRM client usage stats implementation](xe/xe-drm-usage-stats.md)
    - [Xe Configfs](xe/xe_configfs.md)
      - [Overview](xe/xe_configfs.md#overview)
      - [Create devices](xe/xe_configfs.md#create-devices)
      - [Configure Attributes](xe/xe_configfs.md#configure-attributes)
        - [Survivability mode:](xe/xe_configfs.md#survivability-mode)
        - [Allowed engines:](xe/xe_configfs.md#allowed-engines)
      - [Remove devices](xe/xe_configfs.md#remove-devices)
      - [Internal API](xe/xe_configfs.md#internal-api)
  - [Arm Framebuffer Compression (AFBC)](afbc.md)
    - [Components and Ordering](afbc.md#components-and-ordering)
    - [Number of Planes](afbc.md#number-of-planes)
    - [Cross-device interoperability](afbc.md#cross-device-interoperability)
  - [drm/komeda Arm display driver](komeda-kms.md)
    - [Overview of D71 like display IPs](komeda-kms.md#overview-of-d71-like-display-ips)
      - [Layer](komeda-kms.md#layer)
      - [Scaler](komeda-kms.md#scaler)
      - [Compositor (compiz)](komeda-kms.md#compositor-compiz)
      - [Writeback Layer (wb_layer)](komeda-kms.md#writeback-layer-wb-layer)
      - [Post image processor (improc)](komeda-kms.md#post-image-processor-improc)
      - [Timing controller (timing_ctrlr)](komeda-kms.md#timing-controller-timing-ctrlr)
      - [Merger](komeda-kms.md#merger)
      - [Splitter](komeda-kms.md#splitter)
    - [Possible D71 Pipeline usage](komeda-kms.md#possible-d71-pipeline-usage)
      - [Single pipeline data flow](komeda-kms.md#single-pipeline-data-flow)
      - [Dual pipeline with Slave enabled](komeda-kms.md#dual-pipeline-with-slave-enabled)
      - [Sub-pipelines for input and output](komeda-kms.md#sub-pipelines-for-input-and-output)
        - [Layer(input) pipeline](komeda-kms.md#layer-input-pipeline)
        - [Writeback(output) pipeline](komeda-kms.md#writeback-output-pipeline)
        - [Display output pipeline](komeda-kms.md#display-output-pipeline)
    - [Komeda Resource abstraction](komeda-kms.md#komeda-resource-abstraction)
      - [struct komeda_pipeline/component](komeda-kms.md#struct-komeda-pipeline-component)
    - [Resource discovery and initialization](komeda-kms.md#resource-discovery-and-initialization)
    - [Format handling](komeda-kms.md#format-handling)
    - [Attach komeda_dev to DRM-KMS](komeda-kms.md#attach-komeda-dev-to-drm-kms)
      - [How to map plane to Layer(input) pipeline](komeda-kms.md#how-to-map-plane-to-layer-input-pipeline)
      - [Make component/pipeline to be drm_private_obj](komeda-kms.md#make-component-pipeline-to-be-drm-private-obj)
      - [Tracking component_state/pipeline_state by drm_atomic_state](komeda-kms.md#tracking-component-state-pipeline-state-by-drm-atomic-state)
      - [komeda component validation](komeda-kms.md#komeda-component-validation)
      - [komeda_kms Abstraction](komeda-kms.md#komeda-kms-abstraction)
      - [komde_kms Functions](komeda-kms.md#komde-kms-functions)
    - [Build komeda to be a Linux module driver](komeda-kms.md#build-komeda-to-be-a-linux-module-driver)
  - [drm/Panfrost Mali Driver](panfrost.md)
    - [Panfrost DRM client usage stats implementation](panfrost.md#panfrost-drm-client-usage-stats-implementation)
  - [drm/Panthor CSF driver](panthor.md)
    - [Panthor DRM client usage stats implementation](panthor.md#panthor-drm-client-usage-stats-implementation)
  - [Xilinx ZynqMP Ultrascale+ DisplayPort Subsystem](zynqmp.md)
    - [debugfs](zynqmp.md#debugfs)
    - [Internals](zynqmp.md#internals)
  - [nova NVIDIA GPU drivers](nova/index.md)
    - [Guidelines](nova/guidelines.md)
      - [Language](nova/guidelines.md#language)
        - [Style](nova/guidelines.md#style)
      - [Documentation](nova/guidelines.md#documentation)
      - [Acceptance Criteria](nova/guidelines.md#acceptance-criteria)
    - [nova-core](nova/index.md#nova-core)
      - [Guidelines](nova/core/guidelines.md)
        - [Driver API](nova/core/guidelines.md#driver-api)
        - [Acceptance Criteria](nova/core/guidelines.md#acceptance-criteria)
      - [Task List](nova/core/todo.md)
        - [Enablement (Rust)](nova/core/todo.md#enablement-rust)
          - [FromPrimitive API [FPRI]](nova/core/todo.md#fromprimitive-api-fpri)
          - [Conversion from byte slices for types implementing FromBytes [TRSM]](nova/core/todo.md#conversion-from-byte-slices-for-types-implementing-frombytes-trsm)
          - [CoherentAllocation improvements [COHA]](nova/core/todo.md#coherentallocation-improvements-coha)
          - [Generic register abstraction [REGA]](nova/core/todo.md#generic-register-abstraction-rega)
          - [Numerical operations [NUMM]](nova/core/todo.md#numerical-operations-numm)
          - [Delay / Sleep abstractions [DLAY]](nova/core/todo.md#delay-sleep-abstractions-dlay)
          - [IRQ abstractions](nova/core/todo.md#irq-abstractions)
          - [Page abstraction for foreign pages](nova/core/todo.md#page-abstraction-for-foreign-pages)
          - [Scatterlist / sg_table abstractions](nova/core/todo.md#scatterlist-sg-table-abstractions)
          - [PCI MISC APIs](nova/core/todo.md#pci-misc-apis)
          - [XArray bindings [XARR]](nova/core/todo.md#xarray-bindings-xarr)
          - [Debugfs abstractions](nova/core/todo.md#debugfs-abstractions)
        - [GPU (general)](nova/core/todo.md#gpu-general)
          - [Parse firmware headers](nova/core/todo.md#parse-firmware-headers)
          - [Build radix3 page table](nova/core/todo.md#build-radix3-page-table)
          - [Initial Devinit support](nova/core/todo.md#initial-devinit-support)
          - [MMU / PT management](nova/core/todo.md#mmu-pt-management)
          - [VRAM memory allocator](nova/core/todo.md#vram-memory-allocator)
          - [Instance Memory](nova/core/todo.md#instance-memory)
        - [GPU System Processor (GSP)](nova/core/todo.md#gpu-system-processor-gsp)
          - [Export GSP log buffers](nova/core/todo.md#export-gsp-log-buffers)
          - [GSP firmware abstraction](nova/core/todo.md#gsp-firmware-abstraction)
          - [GSP message queue](nova/core/todo.md#gsp-message-queue)
          - [Bootstrap GSP](nova/core/todo.md#bootstrap-gsp)
          - [Client / Device APIs](nova/core/todo.md#client-device-apis)
          - [Bar PDE handling](nova/core/todo.md#bar-pde-handling)
          - [FIFO engine](nova/core/todo.md#fifo-engine)
          - [GR engine](nova/core/todo.md#gr-engine)
          - [CE engine](nova/core/todo.md#ce-engine)
          - [VFN IRQ controller](nova/core/todo.md#vfn-irq-controller)
        - [External APIs](nova/core/todo.md#external-apis)
          - [nova-core base API](nova/core/todo.md#nova-core-base-api)
          - [vGPU manager API](nova/core/todo.md#vgpu-manager-api)
          - [nova-core C API](nova/core/todo.md#nova-core-c-api)
        - [Testing](nova/core/todo.md#testing)
          - [CI pipeline](nova/core/todo.md#ci-pipeline)
      - [VBIOS](nova/core/vbios.md)
        - [VBIOS ROM Layout](nova/core/vbios.md#vbios-rom-layout)
        - [Falcon data Lookup](nova/core/vbios.md#falcon-data-lookup)
      - [Device Initialization (devinit)](nova/core/devinit.md)
        - [Key Functions of devinit](nova/core/devinit.md#key-functions-of-devinit)
        - [Low-level Firmware Initialization Flow](nova/core/devinit.md#low-level-firmware-initialization-flow)
        - [Runtime Considerations](nova/core/devinit.md#runtime-considerations)
        - [Security and Access Control](nova/core/devinit.md#security-and-access-control)
      - [FWSEC (Firmware Security)](nova/core/fwsec.md)
        - [FWSEC Memory Layout](nova/core/fwsec.md#fwsec-memory-layout)
      - [Falcon (FAst Logic Controller)](nova/core/falcon.md)
        - [Falcon security levels](nova/core/falcon.md#falcon-security-levels)
          - [Heavy Secured (HS) also known as Privilege Level 3 (PL3)](nova/core/falcon.md#heavy-secured-hs-also-known-as-privilege-level-3-pl3)
          - [Light Secured (LS or PL2) and Non Secured (NS or PL0)](nova/core/falcon.md#light-secured-ls-or-pl2-and-non-secured-ns-or-pl0)
          - [Root of trust establishment](nova/core/falcon.md#root-of-trust-establishment)
        - [Falcon memory subsystem and DMA engine](nova/core/falcon.md#falcon-memory-subsystem-and-dma-engine)
- [Backlight support](backlight.md)
- [VGA Switcheroo](vga-switcheroo.md)
  - [Modes of Use](vga-switcheroo.md#modes-of-use)
    - [Manual switching and manual power control](vga-switcheroo.md#manual-switching-and-manual-power-control)
    - [Driver power control](vga-switcheroo.md#driver-power-control)
  - [API](vga-switcheroo.md#api)
    - [Public functions](vga-switcheroo.md#public-functions)
    - [Public structures](vga-switcheroo.md#public-structures)
    - [Public constants](vga-switcheroo.md#public-constants)
    - [Private structures](vga-switcheroo.md#private-structures)
  - [Handlers](vga-switcheroo.md#handlers)
    - [apple-gmux Handler](vga-switcheroo.md#apple-gmux-handler)
      - [Graphics mux](vga-switcheroo.md#graphics-mux)
      - [Power control](vga-switcheroo.md#power-control)
      - [Backlight control](vga-switcheroo.md#backlight-control)
      - [Public functions](vga-switcheroo.md#id2)
- [VGA Arbiter](vgaarbiter.md)
  - [vgaarb kernel/userspace ABI](vgaarbiter.md#vgaarb-kernel-userspace-abi)
  - [In-kernel interface](vgaarbiter.md#in-kernel-interface)
  - [libpciaccess](vgaarbiter.md#libpciaccess)
  - [xf86VGAArbiter (X server implementation)](vgaarbiter.md#xf86vgaarbiter-x-server-implementation)
  - [References](vgaarbiter.md#references)
- [Automated testing of the DRM subsystem](automated_testing.md)
  - [Introduction](automated_testing.md#introduction)
  - [Relevant files](automated_testing.md#relevant-files)
    - [drivers/gpu/drm/ci/gitlab-ci.yml](automated_testing.md#drivers-gpu-drm-ci-gitlab-ci-yml)
    - [drivers/gpu/drm/ci/testlist.txt](automated_testing.md#drivers-gpu-drm-ci-testlist-txt)
    - [drivers/gpu/drm/ci/${DRIVER_NAME}-${HW_REVISION}-fails.txt](automated_testing.md#drivers-gpu-drm-ci-driver-name-hw-revision-fails-txt)
    - [drivers/gpu/drm/ci/${DRIVER_NAME}-${HW_REVISION}-flakes.txt](automated_testing.md#drivers-gpu-drm-ci-driver-name-hw-revision-flakes-txt)
    - [drivers/gpu/drm/ci/${DRIVER_NAME}-${HW_REVISION}-skips.txt](automated_testing.md#drivers-gpu-drm-ci-driver-name-hw-revision-skips-txt)
  - [How to enable automated testing on your tree](automated_testing.md#how-to-enable-automated-testing-on-your-tree)
  - [How to update test expectations](automated_testing.md#how-to-update-test-expectations)
  - [How to expand coverage](automated_testing.md#how-to-expand-coverage)
  - [How to test your changes to the scripts](automated_testing.md#how-to-test-your-changes-to-the-scripts)
  - [How to incorporate external fixes in your testing](automated_testing.md#how-to-incorporate-external-fixes-in-your-testing)
  - [How to deal with automated testing labs that may be down](automated_testing.md#how-to-deal-with-automated-testing-labs-that-may-be-down)
- [Misc DRM driver uAPI- and feature implementation guidelines](implementation_guidelines.md)
  - [Asynchronous VM_BIND](drm-vm-bind-async.md)
    - [Nomenclature:](drm-vm-bind-async.md#nomenclature)
    - [Synchronous / Asynchronous VM_BIND operation](drm-vm-bind-async.md#synchronous-asynchronous-vm-bind-operation)
      - [Synchronous VM_BIND](drm-vm-bind-async.md#synchronous-vm-bind)
      - [Asynchronous VM_BIND](drm-vm-bind-async.md#id1)
    - [Multi-operation VM_BIND IOCTL error handling and interrupts](drm-vm-bind-async.md#multi-operation-vm-bind-ioctl-error-handling-and-interrupts)
    - [Example: The Xe VM_BIND uAPI](drm-vm-bind-async.md#example-the-xe-vm-bind-uapi)
  - [VM_BIND locking](drm-vm-bind-locking.md)
    - [The DRM GPUVM set of helpers](drm-vm-bind-locking.md#the-drm-gpuvm-set-of-helpers)
    - [Nomenclature](drm-vm-bind-locking.md#nomenclature)
    - [Locks and locking order](drm-vm-bind-locking.md#locks-and-locking-order)
    - [Protection and lifetime of gpu_vm_bos and gpu_vmas](drm-vm-bind-locking.md#protection-and-lifetime-of-gpu-vm-bos-and-gpu-vmas)
    - [Revalidation and eviction of local objects](drm-vm-bind-locking.md#revalidation-and-eviction-of-local-objects)
      - [Revalidation](drm-vm-bind-locking.md#revalidation)
      - [Eviction](drm-vm-bind-locking.md#eviction)
    - [Locking with external buffer objects](drm-vm-bind-locking.md#locking-with-external-buffer-objects)
    - [Accessing the gpu_vm’s lists without the dma_resv lock held](drm-vm-bind-locking.md#accessing-the-gpu-vm-s-lists-without-the-dma-resv-lock-held)
    - [userptr gpu_vmas](drm-vm-bind-locking.md#userptr-gpu-vmas)
      - [Efficient userptr gpu_vma exec_function iteration](drm-vm-bind-locking.md#efficient-userptr-gpu-vma-exec-function-iteration)
    - [Locking at bind and unbind time](drm-vm-bind-locking.md#locking-at-bind-and-unbind-time)
    - [Locking for recoverable page-fault page-table updates](drm-vm-bind-locking.md#locking-for-recoverable-page-fault-page-table-updates)
- [TODO list](todo.md)
  - [Difficulty](todo.md#difficulty)
    - [Subsystem-wide refactorings](todo.md#subsystem-wide-refactorings)
  - [Remove custom dumb_map_offset implementations](todo.md#remove-custom-dumb-map-offset-implementations)
  - [Convert existing KMS drivers to atomic modesetting](todo.md#convert-existing-kms-drivers-to-atomic-modesetting)
  - [Clean up the clipped coordination confusion around planes](todo.md#clean-up-the-clipped-coordination-confusion-around-planes)
  - [Improve plane atomic_check helpers](todo.md#improve-plane-atomic-check-helpers)
  - [Convert early atomic drivers to async commit helpers](todo.md#convert-early-atomic-drivers-to-async-commit-helpers)
  - [Rename drm_atomic_state](todo.md#rename-drm-atomic-state)
  - [Fallout from atomic KMS](todo.md#fallout-from-atomic-kms)
  - [Get rid of dev->struct_mutex from GEM drivers](todo.md#get-rid-of-dev-struct-mutex-from-gem-drivers)
  - [Move Buffer Object Locking to dma_resv_lock()](todo.md#move-buffer-object-locking-to-dma-resv-lock)
  - [Convert logging to drm_\* functions with drm_device parameter](todo.md#convert-logging-to-drm-functions-with-drm-device-parameter)
  - [Convert drivers to use simple modeset suspend/resume](todo.md#convert-drivers-to-use-simple-modeset-suspend-resume)
  - [Reimplement functions in drm_fbdev_fb_ops without fbdev](todo.md#reimplement-functions-in-drm-fbdev-fb-ops-without-fbdev)
  - [Benchmark and optimize blitting and format-conversion function](todo.md#benchmark-and-optimize-blitting-and-format-conversion-function)
  - [drm_framebuffer_funcs and drm_mode_config_funcs.fb_create cleanup](todo.md#drm-framebuffer-funcs-and-drm-mode-config-funcs-fb-create-cleanup)
  - [Generic fbdev defio support](todo.md#generic-fbdev-defio-support)
  - [connector register/unregister fixes](todo.md#connector-register-unregister-fixes)
  - [Remove load/unload callbacks](todo.md#remove-load-unload-callbacks)
  - [Replace drm_detect_hdmi_monitor() with drm_display_info.is_hdmi](todo.md#replace-drm-detect-hdmi-monitor-with-drm-display-info-is-hdmi)
  - [Consolidate custom driver modeset properties](todo.md#consolidate-custom-driver-modeset-properties)
  - [Use struct iosys_map throughout codebase](todo.md#use-struct-iosys-map-throughout-codebase)
  - [Review all drivers for setting struct drm_mode_config.{max_width,max_height} correctly](todo.md#review-all-drivers-for-setting-struct-drm-mode-config-max-width-max-height-correctly)
  - [Request memory regions in all fbdev drivers](todo.md#request-memory-regions-in-all-fbdev-drivers)
  - [Remove driver dependencies on FB_DEVICE](todo.md#remove-driver-dependencies-on-fb-device)
  - [Remove disable/unprepare in remove/shutdown in panel-simple and panel-edp](todo.md#remove-disable-unprepare-in-remove-shutdown-in-panel-simple-and-panel-edp)
  - [Transition away from using mipi_dsi_\*_write_seq()](todo.md#transition-away-from-using-mipi-dsi-write-seq)
  - [Remove devm_drm_put_bridge()](todo.md#remove-devm-drm-put-bridge)
    - [Core refactorings](todo.md#core-refactorings)
  - [Make panic handling work](todo.md#make-panic-handling-work)
  - [Clean up the debugfs support](todo.md#clean-up-the-debugfs-support)
  - [Object lifetime fixes](todo.md#object-lifetime-fixes)
  - [Remove automatic page mapping from dma-buf importing](todo.md#remove-automatic-page-mapping-from-dma-buf-importing)
    - [Better Testing](todo.md#better-testing)
  - [Add unit tests using the Kernel Unit Testing (KUnit) framework](todo.md#add-unit-tests-using-the-kernel-unit-testing-kunit-framework)
  - [Clean up and document former selftests suites](todo.md#clean-up-and-document-former-selftests-suites)
  - [Enable trinity for DRM](todo.md#enable-trinity-for-drm)
  - [Make KMS tests in i-g-t generic](todo.md#make-kms-tests-in-i-g-t-generic)
  - [Extend virtual test driver (VKMS)](todo.md#extend-virtual-test-driver-vkms)
  - [Backlight Refactoring](todo.md#backlight-refactoring)
    - [Driver Specific](todo.md#driver-specific)
  - [AMD DC Display Driver](todo.md#amd-dc-display-driver)
    - [Bootsplash](todo.md#bootsplash)
    - [Brightness handling on devices with multiple internal panels](todo.md#brightness-handling-on-devices-with-multiple-internal-panels)
    - [Buffer age or other damage accumulation algorithm for buffer damage](todo.md#buffer-age-or-other-damage-accumulation-algorithm-for-buffer-damage)
    - [Querying errors from drm_syncobj](todo.md#querying-errors-from-drm-syncobj)
    - [Outside DRM](todo.md#outside-drm)
  - [Convert fbdev drivers to DRM](todo.md#convert-fbdev-drivers-to-drm)
- [GPU RFC Section](rfc/index.md)
  - [GPU SVM Section](rfc/gpusvm.md)
    - [Agreed upon design principles](rfc/gpusvm.md#agreed-upon-design-principles)
    - [Overview of baseline design](rfc/gpusvm.md#overview-of-baseline-design)
    - [Overview of drm_pagemap design](rfc/gpusvm.md#overview-of-drm-pagemap-design)
    - [Possible future design features](rfc/gpusvm.md#possible-future-design-features)
  - [I915 DG1/LMEM RFC Section](rfc/i915_gem_lmem.md)
    - [Upstream plan](rfc/i915_gem_lmem.md#upstream-plan)
  - [I915 GuC Submission/DRM Scheduler Section](rfc/i915_scheduler.md)
    - [Upstream plan](rfc/i915_scheduler.md#upstream-plan)
    - [TODOs for GuC submission upstream](rfc/i915_scheduler.md#todos-for-guc-submission-upstream)
    - [New uAPI for basic GuC submission](rfc/i915_scheduler.md#new-uapi-for-basic-guc-submission)
      - [Spec references:](rfc/i915_scheduler.md#spec-references)
    - [New parallel submission uAPI](rfc/i915_scheduler.md#new-parallel-submission-uapi)
      - [Export engines logical mapping](rfc/i915_scheduler.md#export-engines-logical-mapping)
      - [A ‘set_parallel’ extension to configure contexts for parallel submission](rfc/i915_scheduler.md#a-set-parallel-extension-to-configure-contexts-for-parallel-submission)
      - [Extend execbuf2 IOCTL to support submitting N BBs in a single IOCTL](rfc/i915_scheduler.md#extend-execbuf2-ioctl-to-support-submitting-n-bbs-in-a-single-ioctl)
  - [I915 Small BAR RFC Section](rfc/i915_small_bar.md)
    - [I915_GEM_CREATE_EXT_FLAG_NEEDS_CPU_ACCESS flag](rfc/i915_small_bar.md#i915-gem-create-ext-flag-needs-cpu-access-flag)
    - [probed_cpu_visible_size attribute](rfc/i915_small_bar.md#probed-cpu-visible-size-attribute)
    - [Error Capture restrictions](rfc/i915_small_bar.md#error-capture-restrictions)
  - [I915 VM_BIND feature design and use cases](rfc/i915_vm_bind.md)
    - [VM_BIND feature](rfc/i915_vm_bind.md#vm-bind-feature)
      - [TLB flush consideration](rfc/i915_vm_bind.md#tlb-flush-consideration)
      - [Execbuf ioctl in VM_BIND mode](rfc/i915_vm_bind.md#execbuf-ioctl-in-vm-bind-mode)
      - [VM_PRIVATE objects](rfc/i915_vm_bind.md#vm-private-objects)
      - [VM_BIND locking hierarchy](rfc/i915_vm_bind.md#vm-bind-locking-hierarchy)
      - [VM_BIND LRU handling](rfc/i915_vm_bind.md#vm-bind-lru-handling)
      - [VM_BIND dma_resv usage](rfc/i915_vm_bind.md#vm-bind-dma-resv-usage)
      - [Mesa use case](rfc/i915_vm_bind.md#mesa-use-case)
    - [Other VM_BIND use cases](rfc/i915_vm_bind.md#other-vm-bind-use-cases)
      - [Long running Compute contexts](rfc/i915_vm_bind.md#long-running-compute-contexts)
        - [User/Memory Fence](rfc/i915_vm_bind.md#user-memory-fence)
        - [Low Latency Submission](rfc/i915_vm_bind.md#low-latency-submission)
      - [Debugger](rfc/i915_vm_bind.md#debugger)
      - [GPU page faults](rfc/i915_vm_bind.md#gpu-page-faults)
      - [Page level hints settings](rfc/i915_vm_bind.md#page-level-hints-settings)
      - [Page level Cache/CLOS settings](rfc/i915_vm_bind.md#page-level-cache-clos-settings)
      - [Evictable page table allocations](rfc/i915_vm_bind.md#evictable-page-table-allocations)
      - [Shared Virtual Memory (SVM) support](rfc/i915_vm_bind.md#shared-virtual-memory-svm-support)
    - [VM_BIND UAPI](rfc/i915_vm_bind.md#vm-bind-uapi)
